<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/item_dis" >

    <TextView
        android:id="@+id/item_title"
        style="@style/shadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="30dp"
        android:shadowColor="#ffaaaaaa"
        android:text="@string/zero"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/item_score_title"
        style="@style/shadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/item_title"
        android:shadowColor="#ffaaaaaa"
        android:text="@string/locked"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/item_score"
        style="@style/shadow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/item_score_title"
        android:shadowColor="#ffaaaaaa"
        android:text="@string/question"
        android:textSize="30sp" />

</RelativeLayout>